# python-best-practices

./: .dockerignore  Dockerfile  README.md  pyproject.toml
python_best_practices/: __main__.py  main_test.py
python_best_practices/common/: types.py  types_test.py
python_best_practices/data_getters/: __init__.py  data_getters.py
python_best_practices/server/: __init__.py  server.py
python_best_practices/user_getters/: __init__.py  user_getters.py
