[tool.poetry]
name = "python-best-practices"
version = "0.1.0"
description = "Showcase of some of the Python best practices I've learned at work"
authors = ["Tim Hilt <timhilt@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
