[tool.poetry]
name = "python-best-practices"
version = "0.1.0"
description = "Showcase of some of the Python best practices I've learned at work"
authors = ["Tim Hilt <timhilt@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.11.0"
httpx = "^0.27.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
